--- a/PushNotificationServer/PushNotificationServer.csproj
+++ b/PushNotificationServer/PushNotificationServer.csproj
@@ -51,7 +51,7 @@
     <Compile Include="Server\NotificationServer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\NotificationDispatchServer.cs" />
+    <Compile Include="Services\HttpServer.cs" />
     <Compile Include="Services\Logger.cs" />
     <Compile Include="Services\Service.cs" />
     <Compile Include="Services\ThreadMonitor.cs" />
