--- a/PushNotificationServer/PushNotificationServer.csproj
+++ b/PushNotificationServer/PushNotificationServer.csproj
@@ -46,20 +46,36 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Notifications\NotificationInfoLoader.cs" />
-    <Compile Include="Notifications\NotificationInfo.cs" />
+    <Compile Include="Services\NotificationInfoLoader.cs" />
+    <Compile Include="UserIOData\ClientInfo.cs" />
     <Compile Include="Server\NotificationServer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\HttpServer.cs" />
     <Compile Include="Services\Logger.cs" />
     <Compile Include="Services\Service.cs" />
-    <Compile Include="Services\ThreadMonitor.cs" />
+    <Compile Include="UserIOData\NotificationInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Install.sh">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="pushnotificationserver.service">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="RunPushServer.sh">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Notifications\ExampleProduct\ProductIntro.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Notifications\Intro to Messaging.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="..\SharedProject1\SharedProject1.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
