Fixed deploy script

--- a/PushNotificationServer/PushNotificationServer.csproj
+++ b/PushNotificationServer/PushNotificationServer.csproj
@@ -28,7 +28,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>bin\Release\PushNotificationServer\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -61,10 +61,10 @@
     <None Include="Install.sh">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="pushnotificationserver.service">
+    <None Include="PushNotificationServer\pushnotificationserver.service">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="RunPushServer.sh">
+    <None Include="PushNotificationServer\RunPushServer.sh">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
