--- a/PushNotificationServer/PushNotificationServer.csproj
+++ b/PushNotificationServer/PushNotificationServer.csproj
@@ -79,6 +79,6 @@
   <Import Project="..\SharedProject1\SharedProject1.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>move "$(TargetFileName)" "./PushNotificationServer/"</PostBuildEvent>
+    <PostBuildEvent>copy "$(TargetFileName)" "./PushNotificationServer/"</PostBuildEvent>
   </PropertyGroup>
 </Project>
